适配 1.12 JEI 并隔离 Jade 能力 / Adapt JEI and isolate Jade capabilities